package ssz;
option java_package = "protobuf.clazz.ssz";
option java_outer_classname = "SszRsp";
import "basic/protocol.proto";
import "basic/common.proto";
//房间信息
message RoomInfoSsz {
	optional int32 room_id = 1; //房间号
	optional int32 game_type_index = 4; //玩法
	optional int32 game_rule_index = 2; //玩法
	repeated int32 game_rule_index_ex = 12; //附加玩法
	optional string game_rule_des = 3; //玩法说明
	optional int32 game_round = 5;
	optional int32 cur_round = 6;
	optional int32 game_status = 7;
	optional int64 create_player_id = 8;
	optional int32 begin_left_card = 9;
	optional int32 _banker_player = 10; //当前庄家
	optional string create_name = 11; //创建者姓名
	optional int32 cell_score = 13; //底注
	optional CommonGameRulesProto new_rules = 14; // 新rules
}

//房间的玩家
message RoomPlayerResponseSsz {
	optional int64 account_id = 1; //账号id
	optional string user_name = 2; //角色名
	optional string head_img_url = 3; //玩家头像
	optional int32 seat_index = 4; //玩家位置索引
	optional string ip = 5; //玩家IP
	optional int32 online = 6; //1在线0断线
	optional int32 sex = 7;
	optional float score = 8;
	optional int32 ready = 9; //0没准备,1准备
	optional string ip_addr = 10; //物理地址
	optional LocationInfor locationInfor = 11;
	optional bool is_trustee = 12; //true托管 false 取消
	optional int64 money = 13; //金币
	optional int64 gold = 14; //闲逸豆
}

//结算
message PukeGameEndSsz{
	optional RoomInfoSsz room_info = 1;
	optional int32 cur_round = 2; //当前圈数
	optional int32 game_round = 3; //游戏圈数
	repeated int32 card_count = 4; //扑克数目
	repeated Int32ArrayResponse cards_data = 5; //扑克列表
	repeated int32 first_score =6;//第一道分数
	repeated int32 second_score =7;//第二道分数
	repeated int32 three_score =8;//第三道分数
	repeated int32 end_score = 9;//结算分数
	repeated int32 extra_score_first = 27;//第一道额外分数
	repeated int32 extra_score_second = 28;//第二道额外分数
	repeated int32 extra_score_three = 29;//第三道额外分数
	optional int32 player_num = 10;//游戏人数
	optional int32 reason = 11;//结束类型
	repeated RoomPlayerResponseSsz players = 12;
	optional int32 banker_player = 19;//庄家
	repeated int32 jetton_score = 18;//下注
	repeated Int32ArrayResponse is_da_qiang = 20;//打枪1为打枪，0为不打抢
	repeated int32 is_quan_lei_da = 21;//全垒打
	repeated Int32ArrayResponse special_score = 22;//特殊牌型得分
	repeated int32 is_special_type = 23;//是否特殊牌型
	repeated Int32ArrayResponse card_type = 24;//牌型
	repeated int32 first_sort = 30;//头道亮牌顺序
	repeated int32 second_sort = 31;//中道亮牌顺序
	repeated int32 three_sort = 32;//尾道亮牌顺序
	repeated int32 da_qiang_score = 33;//打枪分数
	repeated int32 quan_lei_score = 34;//全垒打分数
	//总结算
	repeated int32 all_end_score = 13;//结算总积分
	repeated int32 end_score_max = 14;//单句最高得分
	repeated int32 win_num = 15;//赢句数
	repeated int32 lose_num = 16;//输句数
	repeated int32 draw_num = 17;//输句数
	optional int64 end_time = 25;//结束时间
	optional int64 start_time = 26;//开始时间
}
message Refresh_Clock{
	optional int64 displaytime = 1;//准备时间
}
message TableResponseSsz {
	//游戏变量
	optional int32 banker_player = 1; //庄家玩家
	optional int32 current_player = 2; //当前玩家
	optional int32 cell_score = 3; //底注
	optional RoomInfoSsz room_info = 4;
	repeated RoomPlayerResponseSsz players = 5;
	repeated int32 card_count = 6; //扑克数目
	repeated Int32ArrayResponse cards_data = 7; //扑克列表
	optional int32 display_time = 8; //显示时间
	repeated int32 jetton_score = 9;//下注
	optional int32 game_status = 10;//游戏状态
	repeated bool _can_call_banker = 11;//玩家能否抢庄
	repeated bool _is_open_card = 12;//玩家开牌
	repeated bool _is_call_banker = 13;
	repeated bool _is_jetton_score = 14;
	optional int32 card_type = 15;//牌型
	repeated int32 call_banker_status = 16;//叫庄状态 -1：不叫 0：未叫庄 1:叫庄
	repeated Int32ArrayResponse tui_jian_card_type = 17;//牌型
	repeated Int32ArrayResponse tui_jian_card = 18;//推荐牌型
}
message Send_Card_Data{
	optional int32 cell_score = 1; //底注
	repeated Int32ArrayResponse cards_data = 2; //扑克列表
	repeated int32 card_count = 3; //扑克数目
	optional RoomInfoSsz room_info = 4;
	optional int32 banker_player = 5;//庄家玩家
	optional int32 display_time = 6; //显示时间
	repeated Int32ArrayResponse card_type = 7;//牌型
	repeated Int32ArrayResponse tui_jian_card = 8;//推荐牌型
}
message GameJettonSsz{
	optional int32 cell_score = 1; //底注
	repeated int32 jetton_score = 2;//可下注分数
	optional RoomInfoSsz room_info = 3;
	optional int32 banker_player = 4;//庄家玩家
	optional int32 display_time = 5; //显示时间
	repeated RoomPlayerResponseSsz players = 6;
}
message GameCallBankerSsz{
	optional int32 cell_score = 1; //底注
	optional RoomInfoSsz room_info = 2;
	repeated RoomPlayerResponseSsz players = 3;
	optional int32 display_time = 4; //显示时间
	optional int32 current_player = 5; //当前玩家
	repeated bool _can_call_banker = 6;//玩家能否抢庄
}
//叫庄响应
message CallBankerResult{
	optional int32 call_banker = 1;
	optional int32 opreate_seat_index = 2;
	optional int32 banker_seat_index = 3;
	optional int32 current_seat_index = 4;
	repeated bool _can_call_banker = 5;//玩家能否抢庄
}
//冲分响应
message JettonResult{
	optional int32 jetton_score = 1;
	optional int32 opreate_seat_index = 2;
}
//开牌响应
message SSZ_OpenCardResult{
	optional int32 opreate_seat_index = 1;//操作玩家
}
//叫庄请求
message SSZ_CallBankerRequest{
	optional int32 call_banker = 1;
}
//冲分请求
message SSZ_JettonRequest{
	optional int32 jetton_score = 1;
}
//开牌请求
message SSZ_OpenCardRequest{
	repeated int32 cards_data = 1; //扑克列表
	optional int32 card_count = 2; //扑克数目
	optional int32 is_special = 3;//特殊牌型
}